# alphapulse

./: .gitignore  ALPHAPULSE_BACKUP_AND_RESTORE_GUIDE.md  BACKEND_REORGANIZATION_SUMMARY.md  BACKEND_RESTART_NOW.md  COMPLETE_DATA_MIGRATION_GUIDE.md  COMPLETE_DOCKER_FIX.ps1  COMPLETE_IMPLEMENTATION_SUMMARY.md  CONSOLIDATION_COMPLETE.md  DOCKER_FIX_SUMMARY.md  ENV.md  EXTRACT_DATABASE_FROM_DOCKER.ps1  FINAL_DOCKER_SOLUTION.md  FINAL_STATUS.md  FRONTEND_CONFIGURATION.md  LIVE_DATA_FIX_COMPLETE.md  MIGRATE_DATA_FROM_DOCKER.md  MONOREPO_COMPLETE.md  PROJECT_STATUS.md  QUICK_START.md  README.md  README_BACKUP_SYSTEM.md  REPAIR_DOCKER.md  SIMPLE_SOLUTION_NO_DOCKER.md  SYSTEM_STATUS.md  WORKFLOW_FIXES_COMPLETE.md  __init__.py  backup_database.ps1  backup_docker_volumes.ps1  comprehensive_test_report_20250915_020746.md  comprehensive_test_report_20250915_022358.md  download_and_repair_docker.ps1  env.template  fix_docker_admin.ps1  fix_docker_settings.ps1  hell -Command Get-ChildItem -Force  Select-Object Name  install_postgres_windows.ps1  package-lock.json  package.json  quick_backup.ps1  requirements.txt  (+5 more)
apps/backend/: 50_INDICATOR_INTEGRATION_COMPLETE.md  ADAPTIVE_SYSTEM_COMPLETE.md  ALL_HEADS_IMPLEMENTATION_COMPLETE.txt  BACKEND_COMPARISON.md  COMPLETE_50_PLUS_INDICATORS_FINAL.md  COMPLETE_LEARNING_SYSTEM_DEPLOYMENT.md  COMPLETE_LEARNING_SYSTEM_FINAL.md  COMPLETE_PIPELINE_DIAGRAM.md  CONSENSUS_AND_RISK_COMPLETE_SUMMARY.md  CONSENSUS_MECHANISM_IMPLEMENTATION_COMPLETE.md  CONSENSUS_PIPELINE_FLOW.md  DEPLOY_NOW.md  EXPANDABLE_SDE_HEADS_COMPLETE.md  FINAL_DEPLOYMENT_CARD.md  FINAL_IMPLEMENTATION_STATUS_ALL_HEADS.txt  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_MISMATCH_FIX.md  GAPS_RESOLVED_FINAL_REPORT.md  GAP_ANALYSIS_VERIFICATION_COMPLETE.md  GAP_BACKFILL_GUIDE.md  HEADS_D_E_F_COMPLETE_STATUS.txt  HEAD_H_MARKET_STRUCTURE_COMPLETE.txt  HISTORICAL_DATA_EXPLAINED.md  (+66 more)
(+2066 files in other folders)
